--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
 <h1>Hello World</h1>
-  <p>Testing: asset server rc?</p>
+  <p>Testing: asset server rc, but different deployment?</p>
 </body>
 </html>
